--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,7 @@
 .iphone{
     /*border: 1px black solid;*/
-    width: 750px;
-    height: 1334px;
+/*    width: 750px;
+    height: 1334px;*/
+    width: 100%;
+    height: 100%;
 }
