--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,9 +1,9 @@
 .header{
-    background: purple;
+    background: var(--mediumpurple);
     width: 100%;
     color: white;
     height: 8%;
-    font-size: 36px;
+    font-size: 1rem;
     padding: 25px;
     display: flex;
     align-items: center;
