--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,500,600');
 
+html{
+    touch-action: manipulation;
+    overflow-x: hidden;
+    position: relative;
+}
+
 *{
+        /*position: relative;*/
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 17px;
     font-family: 'Work Sans', sans-serif;
     letter-spacing: 0.25px;
 }
@@ -12,4 +19,5 @@
     --actionpurple: #809cff;
     --textpurple: #352852;
     --mediumpurple: #8791C7;
+    --basicshadow: 0 1px 3px 0 rgba(0,0,0,0.25);
 }
