--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,3 +5,16 @@
     width: 100%;
     height: 100%;
 }
+
+.Tutorial{
+
+}
+.SelectAccounts{
+    position: relative;
+    height: 100vh;
+    /*height: 100%;*/
+    background: #f3f3f5;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
