--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,7 +4,8 @@
     color: white;
     height: 8%;
     font-size: 1rem;
-    padding: 25px;
+    padding: 1.25rem;
+    letter-spacing: 0.02rem;
     display: flex;
     align-items: center;
     box-sizing: border-box;
