--- a/src/components/Icon.module.css
+++ b/src/components/Icon.module.css
@@ -6,18 +6,16 @@
     height: 50px;
     /*border: 1px solid black;*/
     flex-shrink: 0;
-    &.large{
-        width: 3rem;
-        height: 3rem;
-    }
-    &.small{
-
-    }
-    &.tiny{
-
-    }
 }
 .large{
     width: 3rem;
     height: 3rem;
+}
+.medium{
+    width: 2rem;
+    height: 2rem;
+}
+.small{
+    width: 1.25rem;
+    height: 1.25rem;
 }
