--- a/src/components/List.module.css
+++ b/src/components/List.module.css
@@ -1,7 +1,12 @@
 .list{
     width: 100%;
     list-style-type: none;
+    /*margin: 0;*/
+    /*margin: 0; padding: 0;*/
     .option{
+        margin: 0;
+        padding: 0;
         /*list-style-type: none;*/
+        /*border-bottom: 1px solid #d7d7d7;*/
     }
 }
