--- a/src/workflows/onboarding/SelectAccounts.module.css
+++ b/src/workflows/onboarding/SelectAccounts.module.css
@@ -1,21 +1,98 @@
+.selectAccounts{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.x{
+    position: absolute;
+    /*top: 25px;*/
+    margin-left: .75rem;
+    margin-top: 1.5rem;
+    z-index: 0;
+    /*top: 0; bottom: 0; margin: auto;*/
+}
+
 .accountTypeList{
-    
+    margin-top: 0.25rem;
+    padding: 0 1rem;
+    /*background: #f3f3f5;*/
+    /*border: 1px solid red;*/
 }
 .accountTypeItem{
-    padding: 10px;
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+    padding: .65rem;
     display: flex;
     align-items: center;
-    
+
+    /*border: 1px solid black;*/
+    border: 1px solid #d7d7d7;
+    background: #fbfbfc;
+
+    border-radius: 8px;
+
+    transition: transform .3s, background .25s, border-color .25s;
+
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
+}
+.accountTypeItem.selected{
+    /*border-color: black;*/
+    border-color: var(--mediumpurple);
+    background: var(--faintpurple);
+    transform: translateX(55px);
+}
+.accountTypeItem:not(first-of-type){
+    margin-top: .6rem;
+}
+.icon{
+    margin-right: 12px;
 }
 .title{
     color: var(--textpurple);
     font-size: 1rem;
+    font-weight: 500;
 }
 .examples{
+    margin-top: 5px;
     color: var(--mediumpurple);
     font-size: .8rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;;
     max-width: 240px;
+}
+.selectedText{
+    color: var(--mediumpurple);
+    /*margin-bottom: 5px;*/
+    line-height: 1.3rem;
+}
+
+.bottomButtonWrapper{
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    /*height: 90px;*/
+    flex-grow: 1;
+    padding-bottom: 1rem;
+}
+.btnFlipMove{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+}
+
+.startBatchSyncButton{
+    box-sizing: border-box;
+    /*position: absolute;*/
+    width: 100%;
+    padding: 0 1rem;
+}
+.startBatchSyncButton .btn{
+    box-sizing: border-box;
+    width: 100%;
 }
