--- a/src/workflows/onboarding/SelectAccounts.module.css
+++ b/src/workflows/onboarding/SelectAccounts.module.css
@@ -13,16 +13,23 @@
     z-index: 0;
     /*top: 0; bottom: 0; margin: auto;*/
 }
+.x.hidden{
+    visibility: hidden;
+}
 
 .accountTypeList{
-    margin-top: 0.25rem;
+    margin-top: .75rem;
     padding: 0 1rem;
     /*background: #f3f3f5;*/
     /*border: 1px solid red;*/
 }
+.itemWrapper{
+    height: 5.15rem;
+}
 .accountTypeItem{
+    width: 100%;
     overflow: hidden;
-    position: relative;
+    position: absolute;
     z-index: 2;
     padding: .65rem;
     display: flex;
@@ -34,19 +41,24 @@
 
     border-radius: 8px;
 
-    transition: transform .3s, background .25s, border-color .25s;
+    transition: transform .3s, background .25s, border-color .25s, box-shadow .25s;
 
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
 }
 .accountTypeItem.selected{
     /*border-color: black;*/
     border-color: var(--mediumpurple);
-    background: var(--faintpurple);
+    background: white;
     transform: translateX(55px);
 }
-.accountTypeItem:not(first-of-type){
-    margin-top: .6rem;
+.accountTypeItem.passive{
+
+    /*background: var(--faintpurple);*/
+    background: #f3f3f5;
+    border-color: var(--faintpurple);
+    /*box-shadow: 0 0 3px 0 rgba(0,0,0,0);*/
 }
+.accountTypeItem.passive .title{color: var(--mediumpurple);}
 .icon{
     margin-right: 12px;
 }
@@ -96,3 +108,64 @@
     box-sizing: border-box;
     width: 100%;
 }
+
+.zipCheck{
+    position: absolute;
+    bottom: 0;
+    /*height: 200px;*/
+    width: 100%;
+    background: #fbfbfc;
+    box-shadow: 0 -1px 4px 0 rgba(0,0,0,0.15);
+    border: 1px solid #d7d7d7;
+    border-radius: 12px 12px 0 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 2rem;
+}
+    .zipCheck .prompt{
+        margin: 0;
+        margin-top: 1.25rem;
+        color: var(--textpurple);
+        font-size: 1.25rem;
+    }
+    .zipCheck .context{
+        font-size: .8rem;
+        padding: 0 1rem;
+        text-align: center;
+        color: var(--mediumpurple);
+        line-height: 1.3rem;
+    }
+    .zipCheck .context em{
+        font-size: .8rem;
+        font-style: normal;
+        color: var(--textpurple);
+        font-weight: 600;
+
+    }
+    .zipInput{
+        border-radius: 8px;
+        padding: .7rem;
+        font-size: 1.4rem;
+        width: 13rem;
+        text-align: center;
+        border: 1px solid #d7d7d7;
+        display: flex;
+        align-items: center;
+        margin-top: .25rem;
+    }
+    .zipInput:focus{
+        border: 1px solid var(--actionpurple);
+        outline: none;
+    }
+    .zipInput::placeholder{
+        font-size: 1.15rem;
+        color: #d7d7d7;
+        /*margin-bottom: .15rem;*/
+        margin-top: -.25rem;
+    }
+    .zipCheck .decline{
+        margin-top: 1rem;
+        color: var(--actionpurple);
+        font-weight: 500;
+    }
