--- a/src/workflows/onboarding/SelectAccounts.module.css
+++ b/src/workflows/onboarding/SelectAccounts.module.css
@@ -121,7 +121,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 2rem;
+    padding-bottom: 3.5rem;
 }
     .zipCheck .prompt{
         margin: 0;
@@ -164,8 +164,16 @@
         /*margin-bottom: .15rem;*/
         margin-top: -.25rem;
     }
-    .zipCheck .decline{
+    .zipCheck .cityState{
+        position: absolute;
         margin-top: 1rem;
+        bottom: 1.5rem;
+        color: var(--mediumpurple);
+    }
+    .zipCheck .decline{
+        position: absolute;
+        margin-top: 1rem;
+        bottom: 1.5rem;
         color: var(--actionpurple);
         font-weight: 500;
     }
