--- a/src/components/Icon.module.css
+++ b/src/components/Icon.module.css
@@ -1,5 +1,5 @@
 .icon{
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     width: 50px;
@@ -12,8 +12,8 @@
     height: 3rem;
 }
 .medium{
-    width: 2rem;
-    height: 2rem;
+    width: 1.6rem;
+    height: 1.6rem;
 }
 .small{
     width: 1.25rem;
