--- a/src/workflows/onboarding/SelectAccounts.module.css
+++ b/src/workflows/onboarding/SelectAccounts.module.css
@@ -121,7 +121,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 3.5rem;
+    padding-bottom: 4rem;
 }
     .zipCheck .prompt{
         margin: 0;
@@ -153,6 +153,7 @@
         display: flex;
         align-items: center;
         margin-top: .25rem;
+        z-index: 3;
     }
     .zipInput:focus{
         border: 1px solid var(--actionpurple);
@@ -167,8 +168,10 @@
     .zipCheck .cityState{
         position: absolute;
         display: flex; align-items: center;
+        width: 100%; justify-content: center;
+        white-space: nowrap;
         margin-top: 1rem;
-        bottom: 1.5rem;
+        bottom: 1.75rem;
         color: var(--mediumpurple);
     }
     .zipCheck .cityState .icon{
@@ -180,7 +183,22 @@
         white-space: nowrap;
         position: absolute;
         margin-top: 1rem;
-        bottom: 1.5rem;
+        bottom: 1.75rem;
         color: var(--actionpurple);
         font-weight: 500;
+    }
+    .confirmZIPButton{
+        position: absolute;
+        right: 2rem;
+        bottom: 2.25rem;
+        z-index: 13;
+        pointer-events: none;
+        transform-origin: 30% 50%;
+        transform: scale(0);
+        transition: transform .25s;
+    }
+    .confirmZIPButton.show{
+        pointer-events: all;
+        transform: scale(1);
+        /*opacity: 1;*/
     }
