--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -21,12 +21,11 @@
     /*left: 15px;*/
     left: 0;
     opacity: 0;
-    transform: translateX(-30px;);
+    transform: translateX(-30px);
     transition:  opacity .2s;
 }
 .backButton.visible{
     opacity: 1;
-    /*transform: translateX(0);*/
 
 }
 .titleWrapper{
