--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,21 @@ html{
 *{
         /*position: relative;*/
     box-sizing: border-box;
-    font-size: 17px;
+    font-size: 16px;
     font-family: 'Work Sans', sans-serif;
     letter-spacing: 0.25px;
 }
 
 :root{
+    --void: #f3f3f5;
+    --offwhite: #fbfbfc;
+
     --faintpurple: #f5f6ff;
+    --lightpurple: #E6E6F2;
     --actionpurple: #809cff;
     --mediumpurple: #8791C7;
     --textpurple: #352852;
+    --strokepurple: #8791C7;
     --basicshadow: 0 1px 3px 0 rgba(0,0,0,0.25);
+
 }
