--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -20,3 +20,42 @@
     align-items: center;
     justify-content: center;
 }
+
+.buttonGroup{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    border: 1px solid #c4c4c4;
+    border-radius: 8px;
+    box-shadow: var(--basicshadow);
+    overflow: hidden;
+}
+.buttonGroup .option{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 0;
+    height: 100%;
+    border-right: 1px solid #c4c4c4;
+    transition: background .125s;
+}
+.buttonGroup .option.active{
+    background: var(--lightpurple);
+    color: var(--textpurple);
+}
+.buttonGroup .option.inactive{
+    background: var(--offwhite);
+    color: var(--mediumpurple);
+}
+.buttonGroup .option.inactive:hover{
+    background: white;
+    color: var(--actionpurple);
+}
+.buttonGroup .option:first-of-type{
+    padding-left: 3px;
+}
+.buttonGroup .option:last-of-type{
+    border-right: none;
+    padding-right: 3px;
+}
