--- a/src/workflows/onboarding/FindAccount.module.css
+++ b/src/workflows/onboarding/FindAccount.module.css
@@ -2,4 +2,13 @@
     display: flex;
     flex-direction: column;
     padding: 25px;
+
+}
+
+.entry{
+    display: flex;
+    align-items: center;
+}
+.entry .icon{
+    margin-right: 15px;
 }
