--- a/src/workflows/onboarding/FindAccount.module.css
+++ b/src/workflows/onboarding/FindAccount.module.css
@@ -1,18 +1,36 @@
 .findAccount{
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    /*padding: 25px;*/
+    background: #f3f3f5;
+    height: 100vh;
+}
 
+.filters{
+    padding: 15px 25px;
+    margin-top: 5px;
 }
 
 .entry{
     display: flex;
     align-items: center;
+    padding: 10px 20px;
+    background: white;
+    width: 125vw;
+    color: var(--mediumpurple);
 }
+.options{
+    border-bottom: 1px solid #c4c4c4;
+}
+.options:first-of-type{
+    border-top: 1px solid #c4c4c4;
+}
+
 .entry .icon{
     margin-right: 15px;
 }
 
 .list{
     padding: 0;
+    margin-top: 5px;
 }
