--- a/src/workflows/onboarding/FindAccount.module.css
+++ b/src/workflows/onboarding/FindAccount.module.css
@@ -9,6 +9,11 @@
 .filters{
     padding: 15px 25px;
     margin-top: 5px;
+    transition: opacity .2s, transform .2s;
+}
+.filters.hidden{
+    opacity: 0;
+    transform: translateY(-25px);
 }
 
 .entry{
@@ -49,7 +54,40 @@
     margin-right: 15px;
 }
 
+.listWrapper{
+
+}
+
 .list{
     padding: 0;
     margin-top: 5px;
+    transition: transform .4s;
+}
+.list.shiftedUp{
+    transform: translateY(-92px);
+}
+
+.loginToIntegration{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 120px;
+    background: red;
+    transform-origin: 50% 0%;
+    opacity: 0;
+    animation: expandingMask .4s .3s forwards;
+}
+
+
+
+
+@keyframes expandingMask{
+    from{
+        opacity: 0;
+        transform: scaleY(0);
+    }
+    to{
+        opacity: 1;
+        transform: scaleY(1);
+    }
 }
