--- a/src/workflows/onboarding/FindAccount.module.css
+++ b/src/workflows/onboarding/FindAccount.module.css
@@ -28,6 +28,9 @@
 .entry.hospital, .entry.doctor{
     padding: 15px 25px;
 }
+.entry.selected{
+    background: var(--offwhite);
+}
 
 .entry .title{
     color: var(--textpurple);
@@ -44,11 +47,12 @@
 }
 
 .options{
+    box-sizing: border-box;
     border-bottom: 1px solid #c4c4c4;
 }
-.options:first-of-type{
+/*.options:first-of-type{
     border-top: 1px solid #c4c4c4;
-}
+}*/
 
 .entry .icon{
     margin-right: 15px;
@@ -59,6 +63,7 @@
 }
 
 .list{
+    border-top: 1px solid #c4c4c4;
     padding: 0;
     margin-top: 5px;
     transition: transform .4s;
@@ -72,10 +77,10 @@
     width: 100%;
     height: 100vh;
     top: 120px;
-    background: red;
+    background: var(--offwhite);
     transform-origin: 50% 0%;
     opacity: 0;
-    animation: expandingMask .4s .3s forwards;
+    animation: expandingMask .4s .35s forwards;
 }
 
 
