--- a/src/components/Icon.module.css
+++ b/src/components/Icon.module.css
@@ -7,6 +7,10 @@
     /*border: 1px solid black;*/
     flex-shrink: 0;
 }
+.centerpiece{
+    width: 5.25rem;
+    height: 5.25rem;
+}
 .large{
     width: 3rem;
     height: 3rem;
