--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -8,7 +8,7 @@
     letter-spacing: 0.03rem;
     display: flex;
     align-items: center;
-
+    justify-content: space-around;
     white-space: nowrap;
     transform: translateX(0px);
 }
