global css import, adjustments to make pickintegrationtypes self sufficient as story / module

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@ html{
     user-select: none;
         /*this should disable accidental text selection in mobile browsers etc.*/
 }
+body{
+    margin: 0;
+}
 
 *{
         /*position: relative;*/
