--- a/src/workflows/onboarding2/PickIntegrationTypes.module.css
+++ b/src/workflows/onboarding2/PickIntegrationTypes.module.css
@@ -1,8 +1,6 @@
-.selectAccounts{
-    border: 1px solid black;
-}
 
-.selectAccounts{
+
+.pickIntegrationTypes{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
